--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+nav > a {
+  padding: 10px;
+  background-color: grey;
+}
+
+nav {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left:auto;
+  margin-right: auto;
+}
+
+figcaption {
+  font-size: 14px;
+  text-align: center;
+}
+
+#featured-property p  {
+  text-align: center;
+  width: 800px;
+  margin: auto; 
+}
+
+#details div {
+  float: left;
+}
+
+div {
+  text-align: center;
+  background-color: red;
+  width: 25%;
+
+}
